--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <title>enszgr</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?502631964"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?58216150" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?4232841585" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/58vlBhOAUaPYccWSR1iM7o2vLxHoEK-6J0iaWupQHr9fecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMeZu5cXgb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/2GDU5YL_RphixSsBdf3HRMIvXCTNrrIbd1S2vFPFfIXfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMewa5cXgb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -82,9 +82,9 @@
 
 
 </div>
-     <div class="clearfix grpelem" id="ppu732"><!-- column -->
-      <div class="clearfix colelem" id="pu732"><!-- group -->
-       <a class="nonblock nontext clip_frame grpelem" id="u732" href="ens.html"><!-- image --><img class="block" id="u732_img" src="images/ens_neo.gif" data-hidpi-src="images/ens_neo_2x.gif" alt="" width="90" height="90"/></a>
+     <div class="clearfix grpelem" id="pppu732"><!-- column -->
+      <div class="clearfix colelem" id="ppu732"><!-- group -->
+       <a class="nonblock nontext grpelem" id="u732" href="ens.html"><!-- state-based BG images --></a>
        <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4121" href="vakitler.html"><!-- container box --></a>
       </div>
       <a class="nonblock nontext Button shadow rounded-corners colelem" id="buttonu4050" href="major.html"><!-- container box --></a>
@@ -169,6 +169,8 @@
    </div>
   </div>
   <div class="preload_images">
+   <img class="preload" src="images/u732-r.png" alt=""/>
+   <img class="preload" src="images/u732-r_2x.png" alt=""/>
    <img class="preload" src="images/vakit_2.jpg" alt=""/>
    <img class="preload" src="images/major_2.jpg" alt=""/>
    <img class="preload" src="images/major_2_2x.jpg" alt=""/>
