--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <title>enszgr</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?502631964"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?4232841585" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?4067448245" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/2GDU5YL_RphixSsBdf3HRMIvXCTNrrIbd1S2vFPFfIXfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMewa5cXgb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/_7ga-e3ElWzAxYbHKI_HVPMQcB__Sr5MOu696Ur-a8JfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMYtarcXgb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -174,15 +174,14 @@
    <img class="preload" src="images/vakit_2.jpg" alt=""/>
    <img class="preload" src="images/major_2.jpg" alt=""/>
    <img class="preload" src="images/major_2_2x.jpg" alt=""/>
-   <img class="preload" src="images/login_3.jpg" alt=""/>
-   <img class="preload" src="images/login_3_2x.jpg" alt=""/>
+   <img class="preload" src="images/login_2.jpg" alt=""/>
    <img class="preload" src="images/starlord2.jpg" alt=""/>
    <img class="preload" src="images/starlord2_2x.jpg" alt=""/>
    <img class="preload" src="images/twitter_app2.jpg" alt=""/>
    <img class="preload" src="images/tie_2.jpg" alt=""/>
    <img class="preload" src="images/tie_2_2x.jpg" alt=""/>
    <img class="preload" src="images/slack_2.jpg" alt=""/>
-   <img class="preload" src="images/follow.jpg" alt=""/>
+   <img class="preload" src="images/follow_2.jpg" alt=""/>
    <img class="preload" src="images/eki_2.jpg" alt=""/>
    <img class="preload" src="images/love_2.jpg" alt=""/>
    <img class="preload" src="images/love_2_2x.jpg" alt=""/>
@@ -235,11 +234,10 @@
    <img class="preload" src="images/1_2x.png" alt=""/>
    <!--[if lt IE 9]>
    <img class="preload" src="url("images/vakit_2-iebuttonu4121-r-fr.png")" alt=""/>
-   <img class="preload" src="url("images/login_3-iebuttonu4092-r-fr.png")" alt=""/>
-   <img class="preload" src="url("images/login_3-iebuttonu4092-r-fr2.png")" alt=""/>
+   <img class="preload" src="url("images/login_2-iebuttonu4092-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/twitter_app2-iebuttonu3962-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/slack_2-iebuttonu1717-r-fr.png")" alt=""/>
-   <img class="preload" src="url("images/follow-iebuttonu1608-r-fr.png")" alt=""/>
+   <img class="preload" src="url("images/follow_2-iebuttonu1608-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/eki_2-iebuttonu1462-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/bul_2-iebuttonu2056-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/smaug_2-iebuttonu1971-r-fr.png")" alt=""/>
