--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   <link rel="shortcut icon" href="images/a-kal%c4%b1p-favicon.ico?4024393485"/>
   <title>enszgr</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?502631964"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?462630750" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?3126398"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?3794010883" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/IaIvv5Ew0swLEyup2iLbyWWaSBg9jE447RRFqbLaJkwfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMeVE5cXgb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/D3G9rx1FtM6QFE5Nx2uuhQwd4bnrerYDAigKXTFC_sSfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMeoR5rXgb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -85,21 +85,24 @@
      <div class="clearfix grpelem" id="pppu732"><!-- column -->
       <div class="clearfix colelem" id="ppu732"><!-- group -->
        <a class="nonblock nontext grpelem" id="u732" href="ens.html"><!-- state-based BG images --></a>
+       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4659" href="major-kopya.html"><!-- container box --></a>
        <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4121" href="vakitler.html"><!-- container box --></a>
       </div>
-      <a class="nonblock nontext Button shadow rounded-corners colelem" id="buttonu4050" href="major.html"><!-- container box --></a>
-     </div>
-     <div class="clearfix grpelem" id="pbuttonu4092"><!-- column -->
-      <a class="nonblock nontext Button shadow rounded-corners colelem" id="buttonu4092" href="login-concept.html"><!-- container box --></a>
-      <a class="nonblock nontext Button shadow rounded-corners colelem" id="buttonu4000" href="star-lord.html"><!-- container box --></a>
+      <div class="clearfix colelem" id="pbuttonu4092"><!-- group -->
+       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4092" href="login-concept.html"><!-- container box --></a>
+       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4050" href="major.html"><!-- container box --></a>
+      </div>
      </div>
     </div>
-    <div class="clearfix colelem" id="pbuttonu3962"><!-- group -->
+    <div class="clearfix colelem" id="pbuttonu4000"><!-- group -->
+     <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4000" href="star-lord.html"><!-- container box --></a>
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu3962" href="twitter.html"><!-- container box --></a>
-     <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu3873" href="fighters.html"><!-- container box --></a>
     </div>
-    <div class="clearfix colelem" id="pbuttonu1717"><!-- group -->
+    <div class="clearfix colelem" id="pbuttonu3873"><!-- group -->
+     <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu3873" href="fighters.html"><!-- container box --></a>
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1717" href="slack-dark.html"><!-- container box --></a>
+    </div>
+    <div class="clearfix colelem" id="pbuttonu1608"><!-- group -->
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1608" href="follow.html"><!-- container box --></a>
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1462" href="ekinoks.html"><!-- container box --></a>
     </div>
@@ -171,10 +174,12 @@
   <div class="preload_images">
    <img class="preload" src="images/u732-r.png" alt=""/>
    <img class="preload" src="images/u732-r_2x.png" alt=""/>
+   <img class="preload" src="images/deadmilk_2.jpg" alt=""/>
+   <img class="preload" src="images/deadmilk_2_2x.jpg" alt=""/>
    <img class="preload" src="images/vakit_2.jpg" alt=""/>
+   <img class="preload" src="images/login_2.jpg" alt=""/>
    <img class="preload" src="images/major_2.jpg" alt=""/>
    <img class="preload" src="images/major_2_2x.jpg" alt=""/>
-   <img class="preload" src="images/login_2.jpg" alt=""/>
    <img class="preload" src="images/starlord2.jpg" alt=""/>
    <img class="preload" src="images/starlord2_2x.jpg" alt=""/>
    <img class="preload" src="images/twitter_app2.jpg" alt=""/>
