--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/D3G9rx1FtM6QFE5Nx2uuhQwd4bnrerYDAigKXTFC_sSfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMeoR5rXgb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/V95Rh41HdYVPOAxx6CqobzJR6OPfGqmK6UE1dJtVha3fecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMeERprXgb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -85,7 +85,7 @@
      <div class="clearfix grpelem" id="pppu732"><!-- column -->
       <div class="clearfix colelem" id="ppu732"><!-- group -->
        <a class="nonblock nontext grpelem" id="u732" href="ens.html"><!-- state-based BG images --></a>
-       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4659" href="major-kopya.html"><!-- container box --></a>
+       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4659" href="deadmilk.html"><!-- container box --></a>
        <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4121" href="vakitler.html"><!-- container box --></a>
       </div>
       <div class="clearfix colelem" id="pbuttonu4092"><!-- group -->
