--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <title>enszgr</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?502631964"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?75855646" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?74332353" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/eOBpwZHbdiMiYaKBTfC1JVQ7FkY96b6V4V4vmNME-gwfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMe3RThugb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/eGlF2hx8OSSLohnQVZI9sIRG7ivjbhozOp908SoYktJfecCJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMYZxSeugb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -88,25 +88,28 @@
      <div class="clearfix grpelem" id="ppu4713"><!-- column -->
       <div class="clearfix colelem" id="pu4713"><!-- group -->
        <a class="nonblock nontext clip_frame grpelem" id="u4713" href="ens.html"><!-- image --><img class="block" id="u4713_img" src="images/ens_neo.gif" data-hidpi-src="images/ens_neo_2x.gif" alt="" width="102" height="102"/></a>
+       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4871" href="slack-dark-kopya.html"><!-- container box --></a>
        <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4769" href="montreal.html"><!-- container box --></a>
-       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4121" href="vakitler.html"><!-- container box --></a>
       </div>
-      <div class="clearfix colelem" id="pbuttonu4659"><!-- group -->
+      <div class="clearfix colelem" id="pbuttonu4121"><!-- group -->
+       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4121" href="vakitler.html"><!-- container box --></a>
        <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4659" href="deadmilk.html"><!-- container box --></a>
-       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4092" href="login-concept.html"><!-- container box --></a>
       </div>
      </div>
     </div>
-    <div class="clearfix colelem" id="pbuttonu4050"><!-- group -->
+    <div class="clearfix colelem" id="pbuttonu4092"><!-- group -->
+     <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4092" href="login-concept.html"><!-- container box --></a>
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4050" href="major.html"><!-- container box --></a>
+    </div>
+    <div class="clearfix colelem" id="pbuttonu4000"><!-- group -->
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu4000" href="star-lord.html"><!-- container box --></a>
-    </div>
-    <div class="clearfix colelem" id="pbuttonu3962"><!-- group -->
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu3962" href="twitter.html"><!-- container box --></a>
-     <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu3873" href="fighters.html"><!-- container box --></a>
     </div>
-    <div class="clearfix colelem" id="pbuttonu1717"><!-- group -->
+    <div class="clearfix colelem" id="pbuttonu3873"><!-- group -->
+     <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu3873" href="fighters.html"><!-- container box --></a>
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1717" href="slack-dark.html"><!-- container box --></a>
+    </div>
+    <div class="clearfix colelem" id="pbuttonu1608"><!-- group -->
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1608" href="follow.html"><!-- container box --></a>
      <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu1462" href="ekinoks.html"><!-- container box --></a>
     </div>
@@ -176,6 +179,7 @@
    </div>
   </div>
   <div class="preload_images">
+   <img class="preload" src="images/brain_2.jpg" alt=""/>
    <img class="preload" src="images/montreal_3.jpg" alt=""/>
    <img class="preload" src="images/montreal_3_2x.jpg" alt=""/>
    <img class="preload" src="images/vakit_2.jpg" alt=""/>
@@ -242,6 +246,7 @@
    <img class="preload" src="images/1.png" alt=""/>
    <img class="preload" src="images/1_2x.png" alt=""/>
    <!--[if lt IE 9]>
+   <img class="preload" src="url("images/brain_2-iebuttonu4871-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/vakit_2-iebuttonu4121-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/login_2-iebuttonu4092-r-fr.png")" alt=""/>
    <img class="preload" src="url("images/twitter_app2-iebuttonu3962-r-fr.png")" alt=""/>
