--- a/brain.html
+++ b/brain.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "slack-dark-kopya.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "brain.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -12,14 +12,14 @@
   <title>Brain | Icon</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?502631964"/>
-  <link rel="stylesheet" type="text/css" href="css/slack-dark-kopya.css?3991531019" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/brain.css?241310334" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/kf-6tPb1csBcahYRMIUJbePCjlFFyzUeuP39wlVTWRqfe1jJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFSVIMMjgPMgH6qJX3vbMg6gJMBHgIuuShAbMinN3d9B.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/lrhZIGpX0tVf9cO5GZoIiu0yFmibHwPQAJnFa6r3sswfe1jJGvjrIK6Uw2JX52MDWhJhjQMujAwuwRjtwD4qFh9kFRBqjDgK52MuZc9DZQw3eyi8d1FEZaJ0jhNlOfG0ZAoDpcikOcFzdPJHdWmDZAvlShB0SkG4fFSVIMMjgPMgH6qJX3vbMg6gJMBHgIuuShAbMZcz3n9B.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -87,13 +87,13 @@
     </div>
     <div class="shadow gradient rounded-corners clearfix colelem" id="u4840"><!-- group -->
      <div class="clip_frame grpelem" id="u4834"><!-- image -->
-      <img class="block" id="u4834_img" src="images/512x512.png" data-hidpi-src="images/512x512_2x.png" alt="" width="256" height="256"/>
+      <img class="block" id="u4834_img" src="images/512x5122.png" data-hidpi-src="images/512x512_2x2.png" alt="" width="256" height="256"/>
      </div>
      <div class="clip_frame grpelem" id="u4836"><!-- image -->
-      <img class="block" id="u4836_img" src="images/128x128.png" data-hidpi-src="images/128x128_2x.png" alt="" width="64" height="64"/>
+      <img class="block" id="u4836_img" src="images/128x1282.png" data-hidpi-src="images/128x128_2x2.png" alt="" width="64" height="64"/>
      </div>
      <div class="clip_frame grpelem" id="u4832"><!-- image -->
-      <img class="block" id="u4832_img" src="images/48x48.png" data-hidpi-src="images/48x48_2x.png" alt="" width="24" height="24"/>
+      <img class="block" id="u4832_img" src="images/48x482.png" data-hidpi-src="images/48x48_2x2.png" alt="" width="24" height="24"/>
      </div>
     </div>
    </div>
@@ -111,10 +111,10 @@
    <img class="preload" src="images/12.png" alt=""/>
    <img class="preload" src="images/1_2x2.png" alt=""/>
    <!--[if lt IE 9]>
-   <img class="preload" src="url("images/hover-iebuttonu4838-r-fr.png")" alt=""/>
-   <img class="preload" src="url("images/hover-iebuttonu4838-r-fr2.png")" alt=""/>
-   <img class="preload" src="url("images/click-iebuttonu4838-m-fr.png")" alt=""/>
-   <img class="preload" src="url("images/click-iebuttonu4838-m-fr2.png")" alt=""/>
+   <img class="preload" src="url("images/hover-iebuttonu2939-r-fr.png")" alt=""/>
+   <img class="preload" src="url("images/hover-iebuttonu2939-r-fr2.png")" alt=""/>
+   <img class="preload" src="url("images/click-iebuttonu2939-m-fr.png")" alt=""/>
+   <img class="preload" src="url("images/click-iebuttonu2939-m-fr2.png")" alt=""/>
    <![endif]-->
   </div>
   <!-- JS includes -->
