--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/8ACLtqYah18zxWu5IUJ6yJRSn5e0ZSick7U3_LUq4TCfe1SJGvjrIK6Uw2JX52MDWD9uFejUZAbXw2Mo52IXjRwuwR6hFQja5QwDZQZRFc9oeKw7Ocm0Sko0-Ao7jPU8d1w0dc80-cICiaiaOcm0Sko0-Ao7jPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMYPNtr_gb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/equtdv7CkyZlDNYqmeobbcDauKKUuWZC3FhLHY0CF2Cfe1SJGvjrIK6Uw2JX52MDWD9uFejUZAbXw2Mo52IXjRwuwR6hFQja5QwDZQZRFc9oeKw7Ocm0Sko0-Ao7jPU8d1w0dc80-cICiaiaOcm0Sko0-Ao7jPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMYorJr_gb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -79,7 +79,7 @@
      <div class="clearfix grpelem" id="ppu4713"><!-- column -->
       <div class="clearfix colelem" id="pu4713"><!-- group -->
        <a class="nonblock nontext clip_frame grpelem" id="u4713" href="ens.html"><!-- image --><img class="block" id="u4713_img" src="images/ens_neo.gif" data-hidpi-src="images/ens_neo_2x.gif" alt="" width="102" height="102"/></a>
-       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu5929" href="brain.html"><!-- container box --></a>
+       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu5929" href="brain-copy.html"><!-- container box --></a>
        <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu5860" href="dots.html"><!-- container box --></a>
       </div>
       <div class="clearfix colelem" id="pbuttonu4871"><!-- group -->
