--- a/whatsapp.html
+++ b/whatsapp.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "brain-copy.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "whatsapp.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -12,14 +12,14 @@
   <title>WhatsApp | Icon</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?3996505659"/>
-  <link rel="stylesheet" type="text/css" href="css/brain-copy.css?45566808" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/whatsapp.css?4249107138" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/9Qj2Z_ZNYGwkpcpenG2MzBlmoT23g5IJttMI3brzhtCfeGJgfHVeVyJGwQMkF263wuvuFQscwAmqF2M35Q6UFeJDFQJtFR9hFDqDwh9hjDZ85sGRHKo8d1w0dc80-cICZAoDOcoTdcTyOYiaiko8d1w0dc80-cIKfcuuShmzOWFyd1w7fbRW2UMMeM96MPG4fFwVIMMjMPMgP6sFiWF8qMevNJr_gb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/QQk_GQkPR7lnLfe9OKevS05v_j2h0VufzOmxOFDqm2qfeGJgfHVeVyJGwQMkF263wuvuFQscwAmqF2M35Q6UFeJDFQJtFR9hFDqDwh9hjDZ85sGRHKo8d1w0dc80-cICZAoDOcoTdcTyOYiaiko8d1w0dc80-cIKfcuuShmzOWFyd1w7fbRW2UMMeM96MPG4fFwVIMMjMPMgP6sFiWF8qMeurjr_gb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -81,10 +81,10 @@
       <img class="block" id="u5955_img" src="images/wataspp.png" data-hidpi-src="images/wataspp_2x.png" alt="" width="256" height="256"/>
      </div>
      <div class="clip_frame grpelem" id="u5958"><!-- image -->
-      <img class="block" id="u5958_img" src="images/128x1286.png" data-hidpi-src="images/128x128_2x6.png" alt="" width="64" height="64"/>
+      <img class="block" id="u5958_img" src="images/128x128.png" data-hidpi-src="images/128x128_2x.png" alt="" width="64" height="64"/>
      </div>
      <div class="clip_frame grpelem" id="u5961"><!-- image -->
-      <img class="block" id="u5961_img" src="images/48x486.png" data-hidpi-src="images/48x48_2x6.png" alt="" width="24" height="24"/>
+      <img class="block" id="u5961_img" src="images/48x48.png" data-hidpi-src="images/48x48_2x.png" alt="" width="24" height="24"/>
      </div>
     </div>
    </div>
@@ -102,10 +102,10 @@
    <img class="preload" src="images/12.png" alt=""/>
    <img class="preload" src="images/1_2x2.png" alt=""/>
    <!--[if lt IE 9]>
-   <img class="preload" src="images/hover-iebuttonu2313-r-fr.png" alt=""/>
-   <img class="preload" src="images/hover-iebuttonu2313-r-fr2.png" alt=""/>
-   <img class="preload" src="images/click-iebuttonu2313-m-fr.png" alt=""/>
-   <img class="preload" src="images/click-iebuttonu2313-m-fr2.png" alt=""/>
+   <img class="preload" src="images/hover-iebuttonu5954-r-fr.png" alt=""/>
+   <img class="preload" src="images/hover-iebuttonu5954-r-fr2.png" alt=""/>
+   <img class="preload" src="images/click-iebuttonu5954-m-fr.png" alt=""/>
+   <img class="preload" src="images/click-iebuttonu5954-m-fr2.png" alt=""/>
    <![endif]-->
   </div>
   <!-- JS includes -->
