--- a/red-wood.html
+++ b/red-wood.html
@@ -12,14 +12,14 @@
   <title>Red Wood | Icon</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?3996505659"/>
-  <link rel="stylesheet" type="text/css" href="css/red-wood.css?510316577" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/red-wood.css?4205738570" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/xLhZYcuSSn-RUncROtw-KgOto2ixurHZlG_UhLatcXtfeGJgfHVeVyJGwQMkF263wuvuFQscwAmqF2M35Q6UFeJDFQJtFR9hFDqDwh9hjDZ85sGRHKo8d1w0dc80-cICZAoDOcoTdcTyOYiaiko8d1w0dc80-cIKfcuuShmzOWFyd1w7fbRW2UMMeM96MPG4fFwVIMMjMPMgP6sFiWF8qMeWNJr_gb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/y3yOJXAsuU5Ohj2q6S226pVu_nLD-RMiYLMO5zedeAwfeGJgfHVeVyJGwQMkF263wuvuFQscwAmqF2M35Q6UFeJDFQJtFR9hFDqDwh9hjDZ85sGRHKo8d1w0dc80-cICZAoDOcoTdcTyOYiaiko8d1w0dc80-cIKfcuuShmzOWFyd1w7fbRW2UMMeM96MPG4fFwVIMMjMPMgP6sFiWF8qMerrtr_gb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -78,13 +78,13 @@
     </div>
     <div class="shadow gradient rounded-corners clearfix colelem" id="u2949"><!-- group -->
      <div class="clip_frame grpelem" id="u2951"><!-- image -->
-      <img class="block" id="u2951_img" src="images/512x512.png" data-hidpi-src="images/512x512_2x.png" alt="" width="256" height="256"/>
+      <img class="block" id="u2951_img" src="images/512x512fl.png" data-hidpi-src="images/512x512fl_2x.png" alt="" width="256" height="256"/>
      </div>
      <div class="clip_frame grpelem" id="u2957"><!-- image -->
-      <img class="block" id="u2957_img" src="images/128x128.png" data-hidpi-src="images/128x128_2x.png" alt="" width="64" height="64"/>
+      <img class="block" id="u2957_img" src="images/128x128fl.png" data-hidpi-src="images/128x128fl_2x.png" alt="" width="64" height="64"/>
      </div>
      <div class="clip_frame grpelem" id="u2963"><!-- image -->
-      <img class="block" id="u2963_img" src="images/48x48.png" data-hidpi-src="images/48x48_2x.png" alt="" width="24" height="24"/>
+      <img class="block" id="u2963_img" src="images/48x48fl.png" data-hidpi-src="images/48x48fl_2x.png" alt="" width="24" height="24"/>
      </div>
     </div>
    </div>
@@ -95,17 +95,17 @@
    <img class="preload" src="images/hover_2x.png" alt=""/>
    <img class="preload" src="images/click.png" alt=""/>
    <img class="preload" src="images/click_2x.png" alt=""/>
-   <img class="preload" src="images/22.png" alt=""/>
-   <img class="preload" src="images/2_2x2.png" alt=""/>
-   <img class="preload" src="images/32.png" alt=""/>
-   <img class="preload" src="images/3_2x2.png" alt=""/>
-   <img class="preload" src="images/12.png" alt=""/>
-   <img class="preload" src="images/1_2x2.png" alt=""/>
+   <img class="preload" src="images/2.png" alt=""/>
+   <img class="preload" src="images/2_2x.png" alt=""/>
+   <img class="preload" src="images/3.png" alt=""/>
+   <img class="preload" src="images/3_2x.png" alt=""/>
+   <img class="preload" src="images/1.png" alt=""/>
+   <img class="preload" src="images/1_2x.png" alt=""/>
    <!--[if lt IE 9]>
-   <img class="preload" src="images/hover-iebuttonu2313-r-fr.png" alt=""/>
-   <img class="preload" src="images/hover-iebuttonu2313-r-fr2.png" alt=""/>
-   <img class="preload" src="images/click-iebuttonu2313-m-fr.png" alt=""/>
-   <img class="preload" src="images/click-iebuttonu2313-m-fr2.png" alt=""/>
+   <img class="preload" src="images/hover-iebuttonu2939-r-fr.png" alt=""/>
+   <img class="preload" src="images/hover-iebuttonu2939-r-fr2.png" alt=""/>
+   <img class="preload" src="images/click-iebuttonu2939-m-fr.png" alt=""/>
+   <img class="preload" src="images/click-iebuttonu2939-m-fr2.png" alt=""/>
    <![endif]-->
   </div>
   <!-- JS includes -->
