--- a/lul.html
+++ b/lul.html
@@ -10,17 +10,17 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "jquery.musepolyfill.bgsize.js", "dots-copy.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "jquery.musepolyfill.bgsize.js", "lul.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/a-kal%c4%b1p-favicon.ico?crc=523158836"/>
   <title>lul | Wallpaper</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=498000322"/>
-  <link rel="stylesheet" type="text/css" href="css/dots-copy.css?crc=3883515984" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/lul.css?crc=3883515984" id="pagesheet"/>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/uBvk995thK9o-7VP83iihGOiN3IcTs7yp8MKlpi6OYjfeGJgfHVeVyJGwQMkF263wuvuFQscwAmqF2M35Q6UFeJDFQJtFR9hFDqDwh9hjDZ85sGRHKo8d1w0dc80-cICZAoDOcoTdcTyOYiaiko8d1w0dc80-cIKfcuuShmzOWFyd1w7fbRW2UMMeM96MPG4fFwVIMMjMPMgP6sFiWF8qMYVoSHvgb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/BuOOA1rSLYv3dmbJnebbEi1xWHJf93RaPpp9h8HDswCfeGJgfHVeVyJGwQMkF263wuvuFQscwAmqF2M35Q6UFeJDFQJtFR9hFDqDwh9hjDZ85sGRHKo8d1w0dc80-cICZAoDOcoTdcTyOYiaiko8d1w0dc80-cIKfcuuShmzOWFyd1w7fbRW2UMMeM96MPG4fFwVIMMjMPMgP6sFiWF8qMYSEwHvgb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
