--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="stylesheet" type="text/css" href="css/index.css?crc=236020453" id="pagesheet"/>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/Jf-iv3JRmbi9ah14lZ1gze2IaV1u6PizVYCymnw6CPGfe1SJGvjrIK6Uw2JX52MDWD9uFejUZAbXw2Mo52IXjRwuwR6hFQja5QwDZQZRFc9oeKw7Ocm0Sko0-Ao7jPU8d1w0dc80-cICiaiaOcm0Sko0-Ao7jPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMeqoSHvgb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/xqOhoURiZParpJXXrkbLczvBXQX3IxVMfdR5610bFXtfe1SJGvjrIK6Uw2JX52MDWD9uFejUZAbXw2Mo52IXjRwuwR6hFQja5QwDZQZRFc9oeKw7Ocm0Sko0-Ao7jPU8d1w0dc80-cICiaiaOcm0Sko0-Ao7jPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMYdEwHvgb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -80,7 +80,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="clearfix grpelem" id="ppu4713"><!-- column -->
       <div class="clearfix colelem" id="pu4713"><!-- group -->
        <a class="nonblock nontext clip_frame grpelem" id="u4713" href="ens.html"><!-- image --><img class="block" id="u4713_img" src="images/ens_neo.gif?crc=337795419" data-hidpi-src="images/ens_neo_2x.gif?crc=337795419" alt="" width="102" height="102"/></a>
-       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu6954" href="dots-copy.html"><!-- container box --></a>
+       <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu6954" href="lul.html"><!-- container box --></a>
        <a class="nonblock nontext Button shadow rounded-corners grpelem" id="buttonu5929" href="whatsapp.html"><!-- container box --></a>
       </div>
       <div class="clearfix colelem" id="pbuttonu5860"><!-- group -->
