--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>enszgr</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=498000322"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=254951254" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3889712653" id="pagesheet"/>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/88_lzdtLl1CZF0urCa7vIZAbbsCreleL8PQjB65kUQ3fe1SJGvjrIK6Uw2JX52MDWD9uFejUZAbXw2Mo52IXjRwuwR6hFQja5QwDZQZRFc9oeKw7Ocm0Sko0-Ao7jPU8d1w0dc80-cICiaiaOcm0Sko0-Ao7jPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMeoECHvgb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/5fO5GpM5iLGB8WYcNqvLB-QedCDc2W2X4QxMtG3frKGfe1SJGvjrIK6Uw2JX52MDWD9uFejUZAbXw2Mo52IXjRwuwR6hFQja5QwDZQZRFc9oeKw7Ocm0Sko0-Ao7jPU8d1w0dc80-cICiaiaOcm0Sko0-Ao7jPJHdWmDZAvlShB0SkG4fFwVIMMjMPMgP6sFiWF8qMezyi0Ngb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -63,8 +63,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <div class="clearfix gradient" id="page"><!-- column -->
    <div class="position_content" id="page_position_content">
     <a class="anchor_item colelem" id="top"></a>
-    <div class="clearfix colelem" id="u4705-4"><!-- content -->
-     <p>ninja designer.</p>
+    <div class="clearfix colelem" id="pu7699-4"><!-- group -->
+     <div class="clearfix grpelem" id="u7699-4"><!-- content -->
+      <p>enes özgör enszgr ens zgr ozgor ninja designer</p>
+     </div>
+     <div class="grpelem" id="u7702"><!-- simple frame --></div>
     </div>
     <div class="clearfix colelem" id="pu796"><!-- group -->
      <div class="size_fixed grpelem" id="u796"><!-- custom html -->
