--- a/login-concept-copy.html
+++ b/login-concept-copy.html
@@ -10,17 +10,17 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "jquery.musepolyfill.bgsize.js", "login-concept-copy.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "require.js", "login-concept-copy.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/a-kal%c4%b1p-favicon.ico?crc=523158836"/>
   <title>Zownloader | UI</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=498000322"/>
-  <link rel="stylesheet" type="text/css" href="css/login-concept-copy.css?crc=281559839" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/login-concept-copy.css?crc=141018527" id="pagesheet"/>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/_3lFPGP8DBGJukiXlay1t6gxpfDwE_oJ2sbw4vu9-wwfeGJgfHVeVyJGwQMkF263wuvuFQscwAmqF2M35Q6UFeJDFQJtFR9hFDqDwh9hjDZ85sGRHKo8d1w0dc80-cICZAoDOcoTdcTyOYiaiko8d1w0dc80-cIKfcuuShmzOWFyd1w7fbRW2UMMeM96MPG4fFwVIMMjMPMgP6sFiWF8qMenR00Ngb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/bmn74xdvUewAM09jKBT801gyf9HH8C3RVZKnv3pynitfeGJgfHVeVyJGwQMkF263wuvuFQscwAmqF2M35Q6UFeJDFQJtFR9hFDqDwh9hjDZ85sGRHKo8d1w0dc80-cICZAoDOcoTdcTyOYiaiko8d1w0dc80-cIKfcuuShmzOWFyd1w7fbRW2UMMeM96MPG4fFwVIMMjMPMgP6sFiWF8qMYZqp0Ngb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -90,13 +90,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="clip_frame colelem" id="u7778"><!-- image -->
      <img class="block" id="u7778_img" src="images/download_window.png?crc=3999283557" alt="" width="375" height="90"/>
     </div>
-    <div class="clip_frame colelem" id="u7876"><!-- image -->
-     <img class="block" id="u7876_img" src="images/main_window_1.gif?crc=3894822635" data-hidpi-src="images/main_window_1_2x.gif?crc=3894822635" alt="" width="648" height="365"/>
+    <div class="clip_frame colelem" id="u7886"><!-- image -->
+     <img class="block" id="u7886_img" src="images/main_window_2.gif?crc=376366212" data-hidpi-src="images/main_window_2_2x.gif?crc=376366212" alt="" width="648" height="365"/>
+    </div>
+    <div class="clip_frame colelem" id="u7895"><!-- image -->
+     <img class="block" id="u7895_img" src="images/settings_window.png?crc=3797753368" data-hidpi-src="images/settings_window_2x.png?crc=533847115" alt="" width="648" height="365"/>
     </div>
     <div class="clearfix colelem" id="u7800-5"><!-- content -->
      <p>Release Date: <span id="u7800-2">3 vakte kadar.</span></p>
     </div>
-    <div class="verticalspacer" data-offset-top="1139" data-content-above-spacer="1139" data-content-below-spacer="0"></div>
+    <div class="verticalspacer" data-offset-top="1424" data-content-above-spacer="1424" data-content-below-spacer="78"></div>
    </div>
   </div>
   <div class="preload_images">
