--- a/zownloader.html
+++ b/zownloader.html
@@ -10,17 +10,17 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "require.js", "login-concept-copy.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "jquery.musepolyfill.bgsize.js", "zownloader.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/a-kal%c4%b1p-favicon.ico?crc=523158836"/>
   <title>Zownloader | UI</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=498000322"/>
-  <link rel="stylesheet" type="text/css" href="css/login-concept-copy.css?crc=141018527" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/zownloader.css?crc=141018527" id="pagesheet"/>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/bmn74xdvUewAM09jKBT801gyf9HH8C3RVZKnv3pynitfeGJgfHVeVyJGwQMkF263wuvuFQscwAmqF2M35Q6UFeJDFQJtFR9hFDqDwh9hjDZ85sGRHKo8d1w0dc80-cICZAoDOcoTdcTyOYiaiko8d1w0dc80-cIKfcuuShmzOWFyd1w7fbRW2UMMeM96MPG4fFwVIMMjMPMgP6sFiWF8qMYZqp0Ngb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/ukRK-sYlcy6tvJDDxeO8HW1bGLPwOLc7z2MZmIzKwB6feGJgfHVeVyJGwQMkF263wuvuFQscwAmqF2M35Q6UFeJDFQJtFR9hFDqDwh9hjDZ85sGRHKo8d1w0dc80-cICZAoDOcoTdcTyOYiaiko8d1w0dc80-cIKfcuuShmzOWFyd1w7fbRW2UMMeM96MPG4fFwVIMMjMPMgP6sFiWF8qMeGq00Ngb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
