--- a/plusses.html
+++ b/plusses.html
@@ -10,17 +10,17 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "jquery.musepolyfill.bgsize.js", "plusses.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "require.js", "plusses.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/a-kal%c4%b1p-favicon.ico?crc=523158836"/>
   <title>Plusses | Wallpaper</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=498000322"/>
-  <link rel="stylesheet" type="text/css" href="css/plusses.css?crc=3901531355" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/plusses.css?crc=21836866" id="pagesheet"/>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/sCndJ8-kWjSkN4dnLnvr7QFFYK5sB2aqMJh7Xi5BlE6feGJgfHVeVyJGwQMkF263wuvuFQscwAmqF2M35Q6UFeJDFQJtFR9hFDqDwh9hjDZ85sGRHKo8d1w0dc80-cICZAoDOcoTdcTyOYiaiko8d1w0dc80-cIKfcuuShmzOWFyd1w7fbRW2UMMeM96MPG4fFwVIMMjMPMgP6sFiWF8qMeu3tergb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/kCyuq4WOgs9-UOexfF7ta26g4sJFQ8827sjj4gnpqDtfeGJgfHVeVyJGwQMkF263wuvuFQscwAmqF2M35Q6UFeJDFQJtFR9hFDqDwh9hjDZ85sGRHKo8d1w0dc80-cICZAoDOcoTdcTyOYiaiko8d1w0dc80-cIKfcuuShmzOWFyd1w7fbRW2UMMeM96MPG4fFwVIMMjMPMgP6sFiWF8qMe4UGergb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -36,7 +36,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="clearfix colelem" id="pbuttonu7964"><!-- group -->
      <a class="nonblock nontext Button museBGSize grpelem" id="buttonu7964" href="index.html" title="Home"><!-- container box --></a>
      <div class="clearfix grpelem" id="u7965-5"><!-- content -->
-      <p><span id="u7965">lul </span><span id="u7965-2">| Wallpaper</span></p>
+      <p><span id="u7965">Plusses </span><span id="u7965-2">| Wallpaper</span></p>
      </div>
      <a class="nonblock nontext Button museBGSize grpelem" id="buttonu7966" href="https://drive.google.com/folderview?id=0B8SKeYIAN6UlbFpCbzdvLVluSHM&amp;usp=sharing" target="_blank" title="Download Dots Wallpaper Set"><!-- container box --></a>
     </div>
@@ -49,12 +49,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/hover_2x.png?crc=93418249" alt=""/>
    <img class="preload" src="images/click.png?crc=4079688695" alt=""/>
    <img class="preload" src="images/click_2x.png?crc=3796428271" alt=""/>
-   <img class="preload" src="images/22.png?crc=171532338" alt=""/>
-   <img class="preload" src="images/2_2x2.png?crc=4265118043" alt=""/>
-   <img class="preload" src="images/32.png?crc=14107584" alt=""/>
-   <img class="preload" src="images/3_2x2.png?crc=89645186" alt=""/>
-   <img class="preload" src="images/12.png?crc=4208356688" alt=""/>
-   <img class="preload" src="images/1_2x2.png?crc=113427534" alt=""/>
+   <img class="preload" src="images/2.png?crc=171532338" alt=""/>
+   <img class="preload" src="images/2_2x.png?crc=4265118043" alt=""/>
+   <img class="preload" src="images/3.png?crc=14107584" alt=""/>
+   <img class="preload" src="images/3_2x.png?crc=89645186" alt=""/>
+   <img class="preload" src="images/1.png?crc=4208356688" alt=""/>
+   <img class="preload" src="images/1_2x.png?crc=113427534" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
