--- a/ens.html
+++ b/ens.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4256119580"/>
   <link rel="stylesheet" type="text/css" href="css/master_aa-master.css?crc=3949679534"/>
-  <link rel="stylesheet" type="text/css" href="css/ens.css?crc=120587767" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/ens.css?crc=450699503" id="pagesheet"/>
     <!--/*
 
 */
@@ -27,11 +27,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="ppu16923"><!-- column -->
-    <div class="clearfix colelem" id="pu16923"><!-- group -->
-     <a class="nonblock nontext transition grpelem" id="u16923" href="index.html" title="Back To The Future"><!-- simple frame --></a>
-     <a class="nonblock nontext Button transition shadow rounded-corners clearfix grpelem" id="buttonu16930" href="brand.html"><!-- container box --><div class="clearfix grpelem" id="u16931-4"><!-- content --><p>Portföliö</p></div></a>
-    </div>
+   <div class="clearfix grpelem" id="pu16923"><!-- column -->
+    <a class="nonblock nontext transition colelem" id="u16923" href="index.html" title="Back To The Future"><!-- simple frame --></a>
     <div class="rounded-corners clearfix colelem" id="u214"><!-- column -->
      <div class="clearfix colelem" id="pu215"><!-- group -->
       <div class="rounded-corners clip_frame grpelem" id="u215"><!-- image -->
