--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4256119580"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-kal_p.css?crc=136382473"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=2347054" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=411551019" id="pagesheet"/>
     <!--custom head HTML-->
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -41,8 +41,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 
   <div class="clearfix" id="page"><!-- group -->
    <a class="anchor_item grpelem" id="top"></a>
-   <div class="clearfix grpelem" id="pu4713"><!-- column -->
-    <a class="nonblock nontext clip_frame colelem" id="u4713" href="ens.html"><!-- image --><img class="block" id="u4713_img" src="images/ens_neo.gif?crc=337795419" data-hidpi-src="images/ens_neo_2x.gif?crc=337795419" alt="" width="102" height="102"/></a>
+   <div class="clearfix grpelem" id="ppu4713"><!-- column -->
+    <div class="clearfix colelem" id="pu4713"><!-- group -->
+     <a class="nonblock nontext clip_frame grpelem" id="u4713" href="ens.html"><!-- image --><img class="block" id="u4713_img" src="images/ens_neo.gif?crc=337795419" data-hidpi-src="images/ens_neo_2x.gif?crc=337795419" alt="" width="102" height="102"/></a>
+     <a class="nonblock nontext Button transition shadow rounded-corners clearfix grpelem" id="buttonu22776" href="brand.html"><!-- container box --><div class="clearfix grpelem" id="u22777-4"><!-- content --><p>Portföliö</p></div></a>
+    </div>
     <div class="clearfix colelem" id="pbuttonu14750"><!-- group -->
      <a class="nonblock nontext Button transition shadow museBGSize rounded-corners clearfix grpelem" id="buttonu14750" href="logan.html"><!-- container box --><div class="clearfix grpelem" id="u14751-5"><!-- content --><p>Logan |<span id="u14751-2"> Wallpaper</span></p></div></a>
      <a class="nonblock nontext Button transition shadow museBGSize rounded-corners clearfix grpelem" id="buttonu14743" href="hills.html"><!-- container box --><div class="clearfix grpelem" id="u14744-5"><!-- content --><p>Hills |<span id="u14744-2"> Wallpaper</span></p></div></a>
@@ -141,7 +144,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <a class="nonblock nontext Button anim_swing museBGSize colelem" id="buttonu3776" href="index.html#top"><!-- container box --></a>
    </div>
-   <div class="verticalspacer" data-offset-top="4043" data-content-above-spacer="4042" data-content-below-spacer="101"></div>
+   <div class="verticalspacer" data-offset-top="3963" data-content-above-spacer="3962" data-content-below-spacer="99"></div>
    <div class="clearfix grpelem" id="u15925-4"><!-- content -->
     <p>All rights reserved. ©2023</p>
    </div>
