--- a/ens.html
+++ b/ens.html
@@ -39,7 +39,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <p>Enes ÖZGÖR</p>
        </div>
        <div class="clearfix colelem" id="u283"><!-- group -->
-        <a class="nonblock nontext transition clearfix grpelem" id="u259-4" href="https://www.google.com.tr/maps/place/Band%C4%B1rma,+10200+Band%C4%B1rma%2FBal%C4%B1kesir/@40.3389333,27.9487224,14z/data=!3m1!4b1!4m5!3m4!1s0x14b5d377a8bfb0f1:0xbd33d2bd7058850e!8m2!3d40.353707!4d27.971405?hl=tr" target="_blank" title="sen ah bea.."><!-- content --><p id="u259-2">&nbsp;&nbsp;&nbsp; Bandırma, TÜRKİYE</p></a>
+        <a class="nonblock nontext transition clearfix grpelem" id="u259-4" href="https://www.google.com/maps/place/Toronto,+ON/@43.6567919,-79.4609319,11z/data=!3m1!4b1!4m5!3m4!1s0x89d4cb90d7c63ba5:0x323555502ab4c477!8m2!3d43.653226!4d-79.3831843" target="_blank" title="sen ah bea.."><!-- content --><p id="u259-2">&nbsp;&nbsp;&nbsp; Toronto, CANADA</p></a>
         <a class="nonblock nontext clip_frame grpelem" id="u277" href="https://www.google.com.tr/maps/place/Band%C4%B1rma,+10200+Band%C4%B1rma%2FBal%C4%B1kesir/@40.3389333,27.9487224,14z/data=!3m1!4b1!4m5!3m4!1s0x14b5d377a8bfb0f1:0xbd33d2bd7058850e!8m2!3d40.353707!4d27.971405?hl=tr" target="_blank"><!-- image --><img class="block" id="u277_img" src="images/location_icon.png?crc=353009542" data-hidpi-src="images/location_icon_2x.png?crc=117408012" alt="" title="sen ah bea.." width="9" height="15"/></a>
        </div>
       </div>
